add new 'bezier-lines-2' theme

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="themes/ikeda-lines.js"></script>
     <script type="text/javascript" src="themes/bezier-lines.js"></script>
     <script type="text/javascript" src="themes/color-grid.js"></script>
+    <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
 
    
     <!--    the main p5 sketch    -->
