add <script> tag for the for-each module

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -6,10 +6,13 @@
     <!--    osc library    -->
     <script type="text/javascript" src="../node_modules/osc/dist/osc-browser.js"></script>
 
+    <!--    for-each module-->
+    <script type="text/javascript" src="../node_modules/for-each/index.js"></script>
+
     <!--    p5 libraries (only using p5.js at the moment)    -->
     <script type="text/javascript" src="libraries/p5.js"></script>
 
-   
+
     <!--    THEMES: individual p5 draw() funcs for different looks    -->
 
     <script type="text/javascript" src="themes/test-circles.js"></script>
@@ -18,7 +21,7 @@
     <script type="text/javascript" src="themes/color-grid.js"></script>
     <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
 
-   
+
     <!--    the main p5 sketch    -->
     <script type="text/javascript" src="sketch.js"></script>
 
@@ -28,6 +31,7 @@
             padding: 0;
             margin: 0;
         }
+
     </style>
 </head>
 
