remove for-each module

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -6,9 +6,6 @@
     <!--    osc library    -->
     <script type="text/javascript" src="../node_modules/osc/dist/osc-browser.js"></script>
 
-    <!--    for-each module-->
-    <script type="text/javascript" src="../node_modules/for-each/index.js"></script>
-
     <!--    p5 libraries (only using p5.js at the moment)    -->
     <script type="text/javascript" src="libraries/p5.js"></script>
 
@@ -20,6 +17,8 @@
     <script type="text/javascript" src="themes/bezier-lines.js"></script>
     <script type="text/javascript" src="themes/color-grid.js"></script>
     <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
+    <script type="text/javascript" src="themes/graph-lines.js"></script>
+
 
 
     <!--    the main p5 sketch    -->
