--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="themes/bezier-lines.js"></script>
     <script type="text/javascript" src="themes/color-grid.js"></script>
     <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
+    <script type="text/javascript" src="themes/bezier-lines-3.js"></script>
     <script type="text/javascript" src="themes/graph-lines.js"></script>
 
 
