incorporate the title-screens-api.js function into the main sketch: keys [z ,x, c, v] now trigger fade-ins and fade-outs of titles for the 4 viz. pieces

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -9,6 +9,8 @@
     <!--    p5 libraries (only using p5.js at the moment)    -->
     <script type="text/javascript" src="libraries/p5.js"></script>
 
+    <!--    separate code for the title-screen fadein fadeout function-->
+    <script type="text/javascript" src="title-screens-api.js"></script>
 
     <!--    THEMES: individual p5 draw() funcs for different looks    -->
 
