more playing around with the grid visual - can't get it to not hog cpu...

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="themes/bezier-lines-3.js"></script>
     <script type="text/javascript" src="themes/color-grid-plus-bezier-lines.js"></script>
     <script type="text/javascript" src="themes/graph-lines.js"></script>
+    <script type="text/javascript" src="themes/grid-plus-bezier-lines.js"></script>
 
 
 
