more changes to dorian theme

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
     <script type="text/javascript" src="themes/bezier-lines-3.js"></script>
     <script type="text/javascript" src="themes/bezier-lines-4.js"></script>
+    <script type="text/javascript" src="themes/dorian.js"></script>
     <script type="text/javascript" src="themes/color-grid-plus-bezier-lines.js"></script>
     <script type="text/javascript" src="themes/graph-lines.js"></script>
     <script type="text/javascript" src="themes/grid-plus-bezier-lines.js"></script>
