add new dorian pic and movie code - movie still not working yet.

--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -6,8 +6,9 @@
     <!--    osc library    -->
     <script type="text/javascript" src="../node_modules/osc/dist/osc-browser.js"></script>
 
-    <!--    p5 libraries (only using p5.js at the moment)    -->
+    <!--    p5 libraries   -->
     <script type="text/javascript" src="libraries/p5.js"></script>
+    <script type="text/javascript" src="libraries/p5.dom.js"></script>
 
     <!--    separate code for the title-screen fadein fadeout function-->
     <script type="text/javascript" src="title-screens-api.js"></script>
@@ -16,17 +17,10 @@
 
     <script type="text/javascript" src="themes/test-circles.js"></script>
     <script type="text/javascript" src="themes/ikeda-lines.js"></script>
-    <script type="text/javascript" src="themes/bezier-lines.js"></script>
-    <script type="text/javascript" src="themes/color-grid.js"></script>
-    <script type="text/javascript" src="themes/bezier-lines-2.js"></script>
-    <script type="text/javascript" src="themes/bezier-lines-3.js"></script>
-    <script type="text/javascript" src="themes/bezier-lines-4.js"></script>
-    <script type="text/javascript" src="themes/dorian.js"></script>
     <script type="text/javascript" src="themes/color-grid-plus-bezier-lines.js"></script>
-    <script type="text/javascript" src="themes/graph-lines.js"></script>
     <script type="text/javascript" src="themes/grid-plus-bezier-lines.js"></script>
-
-
+    <script type="text/javascript" src="themes/dorian-pic.js"></script>
+    <script type="text/javascript" src="themes/dorian-movie.js"></script>
 
     <!--    the main p5 sketch    -->
     <script type="text/javascript" src="sketch.js"></script>
