--- a/p5-visuals/index.html
+++ b/p5-visuals/index.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="themes/ikeda-lines.js"></script>
     <script type="text/javascript" src="themes/color-grid-plus-bezier-lines.js"></script>
     <script type="text/javascript" src="themes/grid-plus-bezier-lines.js"></script>
+    <script type="text/javascript" src="themes/softies.js"></script>
+    <script type="text/javascript" src="themes/black-screen.js"></script>
     <script type="text/javascript" src="themes/dorian-pic.js"></script>
     <script type="text/javascript" src="themes/dorian-movie.js"></script>
 
